bob/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-srv-ingress
  namespace: ns1
  labels:
    type: fe-srv
  annotations:
    cloud.google.com/app-protocols: '{"fe":"HTTP2"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP 
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: fe
